[package]
name = "js-json-query"
version = "0.1.0"
edition = "2021"
authors = ["pjmp"]
description = "A tool for processing JSON inputs with JavaScript, no dsl."
categories = ["command-line-utilities"]
license = "MIT OR Apahe-2.0"
readme = "README.md"
homepage = "https://github.com/pjmp/js-json-query"
repository = "https://github.com/pjmp/js-json-query"
keywords = ["jq", "jsjq", "js-json-query"]
exclude = ["demos/*.js"]


[[bin]]
path = "src/main.rs"
name = "jsjq"

[dependencies]
argh = "0.1.7"
atty = "0.2.14"
v8 = "0.38.1"
