[package]
authors = ["pjmp"]
categories = ["command-line-utilities", "text-processing", "value-formatting"]
description = "A tool for processing JSON inputs with JavaScript, no dsl."
edition = "2021"
exclude = ["demos/*.js"]
homepage = "https://github.com/pjmp/js-json-query"
keywords = ["jq", "cli", "jjq", "json", "js-json-query"]
license = "MIT OR Apache-2.0"
name = "js-json-query"
readme = "README.md"
repository = "https://github.com/pjmp/js-json-query"
version = "0.5.0"

[[bin]]
name = "jjq"
path = "src/main.rs"

[dependencies]
argh = "0.1.7"
atty = "0.2.14"
snailquote = "0.3.1"
v8 = "0.43.1"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
